add cart and product

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    <header>Hello</header>
-    <main>World!</main>
-    <script src="./scritp1.js"></script>
+    <header>
+        <div class="logo">Shop</div>
+        <div class="cart">
+            <h1>Коризина</h1>
+        </div>
+    </header>
+
+
+    <main>
+        <h1>Товары</h1>
+        <ul class="product-list">
+
+        </ul>
+    </main>
+
+    <script src="main.js"></script>
 </body>
 </html>
