--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,6 @@
 <body>
     <header>
         <div class="logo">Shop</div>
-        <div class="cart">
-            <h1>Коризина</h1>
-        </div>
     </header>
 
 
@@ -20,6 +17,8 @@
         <ul class="product-list">
 
         </ul>
+        <div class="showmore"> </div>
+        <div class="feedback"></div>
     </main>
 
     <script src="main.js"></script>
