--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -21,6 +20,6 @@
         <div class="feedback"></div>
     </main>
 
-    <script src="main.js"></script>
+    <script src="js/shop.js"></script>
 </body>
 </html>
