--- a/public/testvue.html
+++ b/public/testvue.html
@@ -7,10 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        
-    </main>
+    <main>{{ message }}</main>
+    <script>
+        new Vue({
+            el: 'main',
+            data: {
+                message: 'Hello world'
+            }
+        }) 
+
+    </script>
     
-    <script src="js/shop.js"></script>
 </body>
 </html>
