--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 <body>
     <header>
         <div class="logo">Shop</div>
+
+        <div class="header-buttons-block"></div>
     </header>
 
 
@@ -17,9 +19,11 @@
 
         </ul>
         <div class="showmore"> </div>
-        <div class="feedback"></div>
+        <div class="feedback shown"></div>
     </main>
-
+    <footer>
+        <div>@shop</div>
+    </footer>
     <script src="js/shop.js"></script>
 </body>
 </html>
